# gitignore-in

./: .gitignore  .gitignore.in  .octocov.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: release.yml  renovate.json5
.github/rulesets/: default-branch-baseline.json
.github/workflows/: binary-release.yml  check-dependabot-security-updates.yml  cratesio-publish.yml  gitignore-in.yml  happy.yml  octocov.yml  prepare-downstream-release.yml  prepare-next-development-pr.yml  prepare-release-pr.yml  rehearse-downstream-on-main.yml  spellcheck.yml  test.yml
scripts/: README.md  check-dependabot-security-updates.sh  check-release-version.sh  configure-security-settings.sh  set-version.sh
scripts/admin/: configure-security-settings.sh
src/: assembler.rs  build.rs  edit.rs  format.rs  gi.rs  gibo.rs  http_cache.rs  infer.rs  main.rs  parser.rs  restore.rs  script.rs  shell.rs
tests/: cli_output.rs  integration_test.rs
tests/snapshots/: integration_test__help_output_matches_snapshot.snap  integration_test__version_output_format_matches_snapshot.snap
