[package]
name = "gitignore-in"
version = "0.2.0"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "A command line tool for managing .gitignore files with gitignore.in"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/gitignore-in/gitignore-in"
documentation = "https://docs.rs/gitignore-in"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.1", features = ["blocking"] }
shlex = "1.3.0"

[dependencies.openssl]
# This is required for reqwest to work standalone
version = "0.10.64"
features = ["vendored"]

[dev-dependencies]
mktemp = "0.5.1"
