[package]
name = "gitignore-in"
version = "0.2.1"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "A command line tool for managing .gitignore files with gitignore.in"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/gitignore-in/gitignore-in"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "regex"] }
libc = "0.2"
log = "0.4"
reqwest = { version = "0.13.0", features = ["blocking"] }
shlex = "2.0.0"
tempfile = "3"
url = "2.5"

[dev-dependencies]
mktemp = "0.5.1"
